--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # pip install -qr requirements.txt
 
 # base ----------------------------------------
-Cython
+cython
 matplotlib>=3.2.2
 numpy>=1.18.5
 opencv-python>=4.1.2
@@ -9,12 +9,12 @@ Pillow
 PyYAML>=5.3.1
 scipy>=1.4.1
 tensorboard>=1.5
-torch==1.7.0
-torchvision==0.8.1
+torch>=1.7.0
+torchvision>=0.8.1
 tqdm>=4.41.0
 
 # logging -------------------------------------
-# wandb
+wandb
 
 # plotting ------------------------------------
 seaborn>=0.11.0
