--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,26 @@
 
 # base ----------------------------------------
 cython
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.2
+matplotlib
+numpy
+opencv-python
 Pillow
-PyYAML>=5.3.1
-scipy>=1.4.1
-tensorboard>=1.5
-torch>=1.7.0
-torchvision>=0.8.1
-tqdm>=4.41.0
+PyYAML
+scipy
+tensorboard
+torch
+torchvision
+tqdm
 
 # logging -------------------------------------
 wandb
 
 # plotting ------------------------------------
-seaborn>=0.11.0
+seaborn
 pandas
 
 # export --------------------------------------
-# coremltools>=4.1
+# coremltools
 # onnx>=1.8.1
 # scikit-learn==0.19.2  # for coreml quantization
 
