--- a/data/hyp.scratch.640.sift.yaml
+++ b/data/hyp.scratch.640.sift.yaml
@@ -26,4 +26,5 @@ flipud: 0.0  # image flip up-down (probability)
 fliplr: 0.5  # image flip left-right (probability)
 mosaic: 1.0  # image mosaic (probability)
 mixup: 0.0  # image mixup (probability)
-sift: 0.7 #sift augmentation probability
+sift: 1.0 #sift augmentation probability at epoch 0
+sift_decay: 0.95 #sift decay
